--- a/assets/css/style_bio.css
+++ b/assets/css/style_bio.css
@@ -19,14 +19,16 @@ body {
 
 header {
   background-color:#ffffff;
-  padding: 50px;
+  padding: 15px;
   text-align: center;
   border: 2px #cccccc;
+
+  /*margin: auto;*/
 }
 
 
 
-h1 {
+.name_index {
   width: 300px;
   border: 25px;
   padding: 25px;
@@ -35,7 +37,7 @@ h1 {
   float: left;
   margin: auto;
   font-family: Georgia;
-  color: #ffffff
+  color: #ffffff;
 }
 
 .bar {
@@ -43,13 +45,22 @@ h1 {
     margin: auto;
     color: #777777;
     font-family: Arial;
+    padding-top: 50px;
 }
 
+/* index start*/
 
 .about_me {
   color: #4aaaa5;
   font-family: Georgia;
   text-align: left;
+}
+
+hr {
+  border: none;
+  height: 5px;
+  color: red;
+  background-color:#dddddd;
 }
 
 img {
@@ -75,6 +86,39 @@ img {
   */
 }
 
+/* index end*/
+
+/* contact start*/
+
+.contact {
+  color: #4aaaa5;
+  font-family: Georgia;
+  text-align: left;
+
+}
+
+.form {
+    color:#777777;
+    float: right;
+    font-family: Arial;
+    border: 2px #dddddd;
+    padding: 30px;
+    background-color:white;
+    margin: auto;
+    text-align: center;
+}
+
+.submit {
+  background-color: #4aaaa5;
+  border: none;
+  outline: none;
+  padding: 5px;
+}
+
+
+
+
+/* contact end*/
 
 footer {
   background-color:#666666;
