--- a/assets/css/style_bio.css
+++ b/assets/css/style_bio.css
@@ -120,6 +120,8 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
+  color:#4aaaa5;
+  font-family: arial;
 }
 
 /* portfolio end */
