--- a/assets/css/style_bio.css
+++ b/assets/css/style_bio.css
@@ -50,6 +50,27 @@ header {
     padding-top: 50px;
 }
 
+/* link edit */
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
+/* link edit */
+
+
 /* index start */
 
 .about_me {
